fix overflow in user cards

--- a/W2D4/styles/style.css
+++ b/W2D4/styles/style.css
@@ -297,6 +297,7 @@ main {
 
 .who-to-follow-card-left-section {
   gap: 8px;
+  overflow: hidden;
 }
 
 .who-to-follow-card-left-section img {
